--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 </head>
 <body>
     <div class="container">
-        <a href="maxtv/">MAXTV</a>
-        <a href="plustv/">MAXTV</a>
+        <a href="maxtv/">MAX-TV</a>
+        <a href="plustv/">PLUS-TV</a>
     </div>
 </body>
 </html>
