--- a/maxtv/index.html
+++ b/maxtv/index.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>Download the App</h2>
-            <a href="max-tv.apk" class="btn btn-primary btn-lg">Download Now</a>
+            <a href="https://drive.google.com/file/d/1J-Q2QJZ0s6KtR8pzAE9UnigJR_o7Dwhc/view?usp=drivesdk" class="btn btn-primary btn-lg">Download Now</a>
         </div>
         <div class="col-md-8">
             <h2>Screenshots</h2>
