--- a/plustv/index.html
+++ b/plustv/index.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>Download the App</h2>
-            <a href="plus-tv.apk" class="btn btn-primary btn-lg">Download Now</a>
+            <a href="https://drive.google.com/file/d/1J71kl-1RA7JgVcvN5KbmIaj6QB-95OzS/view?usp=drivesdk" class="btn btn-primary btn-lg">Download Now</a>
         </div>
         <div class="col-md-8">
             <h2>Screenshots</h2>
