--- a/maxtv/index.html
+++ b/maxtv/index.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>Download the App</h2>
-            <a href="https://www.dropbox.com/scl/fi/ln7vib1sjehhk893ngisr/Max-Tv-1.apk?rlkey=4m2ouwar7giax9v9yors1ioj3&st=0mrkjmto&dl=0" class="btn btn-primary btn-lg">Download Now</a>
+            <a href="https://uploadapk.store/view-app.php?id=60uploads/apk/base-1.apkuploads/apk/base-1.apk" class="btn btn-primary btn-lg">Download Now</a>
         </div>
         <div class="col-md-8">
             <h2>Screenshots</h2>
