--- a/maxtv/index.html
+++ b/maxtv/index.html
@@ -30,7 +30,7 @@
     <p class="lead">Furahia Mpira, Tamthilia, Magazeti na Tetesi za Soka</p>
     <div class="row">
         <div class="col-md-4">
-            <h2>Download the App</h2>
+            <h2>Download the App:</h2>
             <a href="max-tv.apk" class="btn btn-primary btn-lg">Download Now</a>
         </div>
         <div class="col-md-8">
